--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -8,6 +8,10 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    paths:
+      - 'src/**'
+      - 'book.toml'
+      - '.github/workflows/mdbook.yml'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
